tests/unit/default/syntax-error/097-add-pk-at.x.t
---- IN ----
+PK@|
---- OUT ----
---- ERR ----
syntax: expected <name> after `+PK@` near `|` at position 4 - at line 1
---- EXIT ----
1
